# oai_isolation

./: .gitignore  .gitmodules  BACKWARD_COMPATIBILITY_TEST.md  CMakeCache.txt  CMakeLists.txt  DO_ONELAYER_INTEGRATION.md  Dockerfile  KUBERNETES_DEPLOYMENT.md  KUBERNETES_SETUP.md  Makefile  NR_LDPC_IMPLEMENTATION.md  NR_MODULATION_256QAM.md  NR_MODULATION_TEST.md  NR_PRECODING.md  OLD_CMakeLists.txt  PHASE2_COMPLETION.md  PROJECT_SUMMARY.md  QUICK-START.md  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_STATUS.md  START_HERE.md  cmake_install.cmake  docker-compose.yaml  docker-compose.yml  find_my_fucntion  k8s-compose  test_all_functions.sh
containers/: LAUNCH_ALL.md  README-bare-metal.md  README.md  install-kepler-stack.sh
containers/gnb/crc/: Dockerfile
containers/gnb/layer_map/: Dockerfile  gnb-layer-map-deployment.yaml
containers/gnb/ldpc/: Dockerfile  gnb-ldpc-deployment.yaml  my-ldpc-deployment.yaml
containers/gnb/modulation/: Dockerfile
containers/gnb/ofdm_mod/: Dockerfile
containers/gnb/precoding/: Dockerfile  gnb-precoding-deployment.yaml
containers/gnb/scramble/: Dockerfile  gnb-scramble-deployment.yaml
containers/results_kepler/30e-9/: Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_20.csv  Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_24.csv  Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_27.csv  Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_31.csv  Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_35.csv  Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_38.csv  Pod_Process Power Consumption (W) in Namespace_ default-data-2026-01-06 18_04_42.csv
containers/services/nr_ch_estimation/: Dockerfile  app.py
containers/services/nr_crc/: Dockerfile  app.py
containers/services/nr_crc_check/: Dockerfile  app.py
containers/services/nr_descrambling/: Dockerfile  app.py
containers/services/nr_layer_demapping_test/: Dockerfile  app.py
containers/services/nr_layermapping/: Dockerfile  app.py
containers/services/nr_ldpc/: Dockerfile  app.py
containers/services/nr_ldpc_dec/: Dockerfile  app.py
containers/services/nr_mmse_eq/: Dockerfile  app.py
containers/services/nr_modulation_test/: Dockerfile  app.py
containers/services/nr_ofdm_demo/: Dockerfile  app.py
containers/services/nr_ofdm_modulation/: Dockerfile  app.py
containers/services/nr_precoding/: Dockerfile  app.py
containers/services/nr_scramble/: Dockerfile  app.py
containers/services/nr_soft_demod/: Dockerfile  app.py
containers/ue/ch_est/: Dockerfile
containers/ue/ch_mmse/: Dockerfile
containers/ue/check_crc/: Dockerfile
containers/ue/descrambling/: Dockerfile
containers/ue/layer_demap/: Dockerfile
containers/ue/ldpc_dec/: Dockerfile
containers/ue/ofdm_demod/: Dockerfile
containers/ue/soft_demod/: Dockerfile
docs/: ARCHITECTURE.md  COMPONENTS.md  MONITORING_KEPLER.md  README.md
k8s/: DEPLOYMENT_GUIDE.md  Makefile  QUICK_START_MONITORING.md  README.md  SUMÁRIO.md  TROUBLESHOOTING.md  deploy.sh  docker-compose.yaml  energy-queries.sh  gnb-crc-deployment.yaml  gnb-modulation-deployment.yaml  gnb-ofdm-mod-deployment.yaml  grafana-dashboard-ldpc.json  install-monitoring-stack.sh  kind-setup.sh  kustomization.yaml  load-kind-images  monitor.sh  quickstart.sh  ue-ch-est-deployment.yaml  ue-ch-mmse-deployment.yaml  ue-ldpc-dec-deployment.yaml  ue-ofdm-demod-deployment.yaml
k8s-manifests/: Kepler Exporter Dashboard-1767693829895.json  gnb-deployments.yaml  ue-deployments.yaml
k8s/manifests/: kustomization.yaml  namespace.yaml
k8s/manifests/deployments/gnb/: gnb-crc.yaml
k8s/manifests/deployments/ue/: ue-check-crc-deployment.yaml  ue-descrambling-deployment.yaml  ue-layer-demap-deployment.yaml  ue-soft-demod-deployment.yaml
k8s/scripts/: build-images.sh  deploy.sh
kubernetes/: configmap.yaml  ingress.yaml  namespace.yaml
kubernetes/deployments/: nr_ch_estimation.yaml  nr_crc.yaml  nr_crc_check.yaml  nr_descrambling.yaml  nr_layer_demapping_test.yaml  nr_layermapping.yaml  nr_ldpc.yaml  nr_ldpc_dec.yaml  nr_mmse_eq.yaml  nr_modulation_test.yaml  nr_ofdm_demo.yaml  nr_ofdm_modulation.yaml  nr_precoding.yaml  nr_scramble.yaml  nr_soft_demod.yaml
kubernetes/services/: nr_ch_estimation.yaml  nr_crc.yaml  nr_crc_check.yaml  nr_descrambling.yaml  nr_layer_demapping_test.yaml  nr_layermapping.yaml  nr_ldpc.yaml  nr_ldpc_dec.yaml  nr_mmse_eq.yaml  nr_modulation_test.yaml  nr_ofdm_demo.yaml  nr_ofdm_modulation.yaml  nr_precoding.yaml  nr_scramble.yaml  nr_soft_demod.yaml
notes/: IMPLEMENTATION_SUMMARY.md  NR_LDPC_IMPLEMENTATION.md
scripts/: build-all-images.sh  deploy-to-k8s.sh  generate_k8s_manifests.py  generate_services.py  push-images.sh
src/: find_function.txt  functions.c  functions.h  main.c  modulation_tables.h  nr_dlsch_onelayer.c  nr_dlsch_onelayer.h  stubs.c
